<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.cytoscape</groupId>
	<artifactId>network-merge</artifactId>
	<version>3.9.6</version>
	<packaging>bundle</packaging>
	<name>Network Merge</name>

	<properties>
		<bundle.symbolicName>org.cytoscape.merge</bundle.symbolicName>
		<bundle.namespace>org.cytoscape.network.merge.internal</bundle.namespace>

		<cytoscape.api.version>3.10.0</cytoscape.api.version>
		<maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>3.5.6</maven-surefire-plugin.version>
		<maven-bundle-plugin.version>6.0.2</maven-bundle-plugin.version>
		<osgi.api.version>7.0.0</osgi.api.version>
		<junit.version>4.13.2</junit.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<scm>
		<connection>scm:git:git://github.com/cytoscape/network-merge.git</connection>
		<developerConnection>scm:git:git@github.com:cytoscape/network-merge.git</developerConnection>
		<url>https://github.com/cytoscape/network-merge.git</url>
	</scm>

	<repositories>
		<repository>
			<id>cytoscape_releases</id>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
			<name>Cytoscape Releases</name>
			<url>https://nrnb-nexus.ucsd.edu/repository/cytoscape_releases/</url>
		</repository>
		<repository>
			<id>cytoscape_snapshots</id>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
			<name>Cytoscape Snapshots</name>
			<url>https://nrnb-nexus.ucsd.edu/repository/cytoscape_snapshots/</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>cytoscape_releases</id>
			<name>Cytoscape Releases</name>
			<url>https://nrnb-nexus.ucsd.edu/repository/cytoscape_releases/</url>
		</repository>
		<snapshotRepository>
			<id>cytoscape_snapshots</id>
			<name>Cytoscape Snapshots</name>
			<url>https://nrnb-nexus.ucsd.edu/repository/cytoscape_snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>${maven-bundle-plugin.version}</version>
				<extensions>true</extensions>
				<executions>
					<!-- Lets Eclipse (m2e PDE connector) regenerate the manifest in target/classes on incremental builds -->
					<execution>
						<id>bundle-manifest</id>
						<phase>process-classes</phase>
						<goals>
							<goal>manifest</goal>
						</goals>
						<configuration>
							<supportIncrementalBuild>true</supportIncrementalBuild>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<instructions>
						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
						<Bundle-Version>${project.version}</Bundle-Version>
						<Export-Package>!${bundle.namespace}.*</Export-Package>
						<Private-Package>${bundle.namespace}.*</Private-Package>
						<Bundle-Activator>${bundle.namespace}.CyActivator</Bundle-Activator>
					</instructions>
				</configuration>
			</plugin>
		</plugins>
	</build>


	<dependencies>
		<dependency>
			<groupId>org.ops4j.pax.logging</groupId>
			<artifactId>pax-logging-api</artifactId>
			<version>2.0.16</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>osgi.core</artifactId>
			<version>${osgi.api.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- Cytoscape API dependencies -->

		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>model-api</artifactId>
			<version>${cytoscape.api.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>core-task-api</artifactId>
			<version>${cytoscape.api.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>swing-application-api</artifactId>
			<version>${cytoscape.api.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>swing-util-api</artifactId>
			<version>${cytoscape.api.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>command-executor-api</artifactId>
			<version>${cytoscape.api.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>io-api</artifactId>
			<version>${cytoscape.api.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.18.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
